--- a/miniprojects/kekata/static/css/kekata.css
+++ b/miniprojects/kekata/static/css/kekata.css
@@ -19,6 +19,10 @@ body {
   cursor: pointer;
 }
 
+#fullpage span{
+  font-family: Handlee;
+}
+
 #kekata {
   text-align:center;
   font-size:2.5rem;
